<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumDetailActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#0000"
        android:onClick="goBack"
        android:scaleType="fitXY"
        android:src="@drawable/backarrow"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />
    
    <TextView
        android:id="@+id/albumDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Album Details"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />


    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ini_judul_album"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumDetailsLabel" />

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="15dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ini_nama_artist"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumImage"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/albumGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ini_genre"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/albumPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/ini_harga_album"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumGenre"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/totalSold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ini_jumlah_terjual"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumPrice"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quantity :"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalSold"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/orderBtn"
        android:layout_width="186dp"
        android:layout_height="33dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#00CCB2"
        android:text="ORDER"
        android:onClick="validateQty"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLabel"
        app:layout_constraintVertical_bias="0.162" />

    <!--Navbar code-->

    <View
        android:id="@+id/navbarBG"
        android:layout_width="412dp"
        android:layout_height="70dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/homeBtn"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:background="#0000"
        android:onClick="goHome"
        android:scaleType="fitXY"
        android:src="@drawable/homebtn"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/albumsBtn"
        android:layout_width="75dp"
        android:layout_height="71dp"
        android:background="#0000"
        android:onClick="goAlbums"
        android:scaleType="fitXY"
        android:src="@drawable/albumsbtn"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/aboutUsBtn"
        android:layout_width="73dp"
        android:layout_height="71dp"
        android:background="#0000"
        android:onClick="goAboutUs"
        android:scaleType="fitXY"
        android:src="@drawable/aboutusbtn"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/logOutBtn"
        android:layout_width="67dp"
        android:layout_height="71dp"
        android:background="#0000"
        android:onClick="goLogout"
        android:scaleType="fitXY"
        android:src="@drawable/logoutbtn"
        app:layout_constraintBottom_toBottomOf="@+id/navbarBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/inputQty"
        android:layout_width="38dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />
    <!--    End of Navbar Code-->

</androidx.constraintlayout.widget.ConstraintLayout>